tests/paczka1/small_fuzzy/13762431.err
Error in line 3: bM9 A439 7,99
Error in line 4: 1zHzr0 S960 77,1
